--- a/URL/templates/home.html
+++ b/URL/templates/home.html
@@ -3,16 +3,6 @@
 <head>
     <title>URL Shortener</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='home.css') }}">
-    <style>
-        .hidden { display: none; }
-        .copy-confirmation {
-            color: green;
-            margin-left: 10px;
-        }
-        #short-url-container {
-            margin: 20px 0;
-        }
-    </style>
 </head>
 <body>
     <h1>URL Shortener</h1>
@@ -21,7 +11,7 @@
     </p>
     <form method="POST">
         <input type="url" name="url" placeholder="Enter your URL" required>
-        <button type="submit">Shorten</button>
+        <button id="submit-button" class="submit-button" type="submit">Shorten</button>
     </form>
 
     {% if short_url %}
